--- a/TravelRecordApp/TravelRecordApp.Android/packages.config
+++ b/TravelRecordApp/TravelRecordApp.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="monoandroid81" />
   <package id="Plugin.CurrentActivity" version="2.1.0.2" targetFramework="monoandroid81" />
   <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="monoandroid81" />
   <package id="sqlite-net-pcl" version="1.5.231" targetFramework="monoandroid81" />
