--- a/TravelRecordApp/TravelRecordApp/packages.config
+++ b/TravelRecordApp/TravelRecordApp/packages.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="sqlite-net-pcl" version="1.5.231" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
@@ -21,6 +29,7 @@
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Runtime" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
