--- a/TravelRecordApp/TravelRecordApp/TravelRecordApp.csproj
+++ b/TravelRecordApp/TravelRecordApp/TravelRecordApp.csproj
@@ -172,7 +172,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Assets\Images\plane.png" />
+    <EmbeddedResource Include="Assets\Images\plane.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.3.3.0.967583\build\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.3.3.0.967583\build\Xamarin.Forms.targets')" />
