--- a/TravelRecordApp/TravelRecordApp.iOS/packages.config
+++ b/TravelRecordApp/TravelRecordApp.iOS/packages.config
@@ -7,6 +7,9 @@
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.11" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Geolocator" version="4.5.0.6" targetFramework="xamarinios10" />
+  <package id="Xamarin.Build.Download" version="0.10.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.Auth" version="6.9.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.Core" version="6.10.4" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="3.3.0.967583" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Maps" version="3.3.0.967583" targetFramework="xamarinios10" />
 </packages>
